--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,29 +4,35 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+  <link rel="stylesheet" href="../style.css">
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <title>Github Jobs Search</title>
 </head>
-<body>
+<body background="./images/background.jpg">
   <div class="container" id="wrapper"> 
     <div id ="formContainer" class="container col-sm-3">
+        <h2 class="display-3" class="text-center">GitHub Jobs</h2>
+<br>
       <form id="jobSearch">
-        <div class="form-group justify-content-center">
+        <div class="font" class="form-group justify-content-center">
           <label for="searchQuery">Github Jobs Search!</label>
           <input type="text" class="form-control" id="searchQuery" aria-describedby="emailHelp" placeholder="Python, ruby, javascript...">
         </div>
-        <div class="form-group">
+        <br>
+        <div class="font" class="form-group">
           <label for="locationQuery">Job Location</label>
-          <input type="text" class="form-control" id="locationQuery" placeholder="Lothric Castle">
+          <input type="text" class="form-control" id="locationQuery" placeholder="e.g. Miami, Florida">
         </div>
-        <div class="form-group form-check">
+        <!-- <div class="form-group form-check">
           <input type="checkbox" class="form-check-input" id="exampleCheck1">
           <label class="form-check-label" for="exampleCheck1">Maybe put maps option here?</label>
-        </div>
+        </div> -->
+        <br>
         <button type="submit" id="jobButton" class="btn btn-primary">Find Jobs</button>
       </form>
     </div>
+    <br>
     <div id="resultsContainer" />
   </div>
   <script type="application/javascript" src="javascript/app.js"></script>
